--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-jsondb-template",
+  "name": "vite-jsondb-example",
   "private": true,
   "version": "0.0.1",
   "type": "module",
