--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,7 @@
     {
       "source": "/api/(.*)",
       "destination": "api/server.js"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
